@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Make Times plugin use INFO facets for display
+
 0.000123  2019-08-16 13:21:29-07:00 America/Los_Angeles
 
     - Fix double-load bug on Plugin::Times
